CreateDriverController code cleaned.